Fix alignment of page numbers

--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -384,6 +384,7 @@ li.cardoStyleLi {
 .pageNumbers {
     display: inline-block;
     position: absolute;
+    text-align:left;
     width: 18%;
     left:-20%;
 }
